small css fix for hero section (got rid of a double scroll bar)

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* overflow-x: hidden; */
+}
+
+html, body {
   overflow-x: hidden;
 }
 
