--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,4 +1,5 @@
 .hero {
+  overflow: hidden;
   height: 100vh;
   display: flex;
   justify-content: space-between;
